k8s_ressources/project_deployment/deploy-comments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - env:
        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
          value: http://registry-svc:8761/eureka/
        - name: SPRING_DATASOURCE_URL
          value: jdbc:mysql://mysql:3306/commentservice
        name: comments
        image: europe-west1-docker.pkg.dev/rayane-devops-test21/biblio-registry/comment-service:51c3596
        ports:
        - containerPort: 9003
---
apiVersion: v1
kind: Service
metadata:
  name: comments-svc
spec:
  ports:
  - port: 9003
    protocol: TCP
    targetPort: 9003
  selector:
    app: comments
