k8s_ressources/project_deployment/deploy-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: europe-west1-docker.pkg.dev/rayane-devops-test21/biblio-registry/front:8f05ca6
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: front
