k8s_ressources/project_deployment/deploy-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - env:
        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
          value: http://registry-svc:8761/eureka/
        name: gateway
        image: europe-west1-docker.pkg.dev/rayane-devops-test21/biblio-registry/service-gateway:da2aefe
        ports:
        - containerPort: 9191
---
apiVersion: v1
kind: Service
metadata:
  name: app-gateway
spec:
  ports:
  - port: 9191
    protocol: TCP
    targetPort: 9191
  selector:
    app: gateway
